--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
 </head>
 
 <body class="ishome">
+	<div class="preloader"><div class="pulse"></div></div>
 	<div id="my-page">
 		<div id="my-header">
 			<header class="site-header" style="background-image: url(img/top-bg.jpg);">
@@ -314,11 +315,55 @@
 
 		</div>
 		<div id="my-footer">
-
+			<div class="main-footer">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-2 col-md-4 col-sm-6"> <div class="footer-column">
+							<img src="img/logo-1.svg" alt="alt" class="logo-footer">
+							<p>Салон красоты <br>бизнес-класса в Москве</p>
+							<div class="footer-social">
+									<nav class="soc">
+										<ul>
+											<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+											<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+											<li><a href="#"><i class="fa fa-vk"></i></a></li>
+										</ul>
+									</nav>
+								</div>
+						</div> 
+					</div>
+						<div class="col-lg-3 col-md-4 col-sm-6"> <div class="footer-column">
+							<nav class="footer-menu">
+								<ul>
+									<li class="active"><a href="#">Парикмахерский сервис</a></li>
+									<li><a href="#">Косметологический сервис</a></li>
+									<li><a href="#">Маникюрный сервис</a></li>
+									<li><a href="#">Массаж и SPA</a></li>
+									<li><a href="#">Солярий</a></li>
+									<li><a href="#">Наши специалисты</a></li>
+								</ul>
+							</nav>
+						</div> 
+					</div>
+						<div class="col-lg-3 col-md-4 col-sm-6"> <div class="footer-column">
+							<p class="footer-addr"><i class="fa fa-location-arrow"></i>г. Москва, ул. Ивана Бабушкина, 22 с1, м. Профсоюзная</p>
+							<p class="footer-addr"><i class="fa fa-clock-o"></i>Время работы: ежедневно, <br>10:00-22:00</p>
+							<p class="footer-addr"><tel class="footer-phone"><i class="fa fa-mobile"></i>+7 (495) 922-77-72</tel></p>
+						</div> 
+					</div>
+						<div class="col-lg-4 col-md-12 col-sm-6"> <div class="footer-column">
+							<div class="map">
+									<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa563b7c61114c210cd54a1a90df3c387f8ec11cdf7c7c714a75d1a083242e8ce&amp;width=100%&amp;height=200&amp;lang=ru_RU&amp;scroll=true"></script>
+							</div>
+						</div> 
+					</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 
-
+	<div class="top" title="Наверх"><i class="fa fa-angle-double-up"></i></div>
 
 	<link rel="stylesheet" href="css/main.min.css">
 	<script src="js/scripts.min.js"></script>
